--- a/newyear/index.html
+++ b/newyear/index.html
@@ -77,7 +77,7 @@
         </div>
         <div class="stage-container remove">
             <div class="page_two hide">
-                <div id="text" style="display:none;"><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1345485069&auto=1&height=33"></iframe>To: 唐日天<p>倒计时<br><br>还有<span id="time"></span><br><span id="text1"></span><br> <br>嘿嘿傻der<br>2022年12月31日<br>杨某 留<br>明年继续爱日天！！<br>彩蛋:点击屏幕任意地方即可放烟花<br><br><br><span id="copyright"></span></p></div>
+                <div id="text" style="display:none;">To: 唐日天<p>倒计时<br><br>还有<span id="time"></span><br><span id="text1"></span><br> <br>嘿嘿傻der<br>2022年12月31日<br>杨某 留<br>明年继续爱日天！！<br>彩蛋:点击屏幕任意地方即可放烟花<br><br><br><span id="copyright"></span></p></div>
                 <div class="type_words" id="contents" style="font-size:1.15rem;line-height:1.5rem;"></div>
             </div>
             <div class="canvas-container">
@@ -135,6 +135,8 @@
                 </div>
             </div>
         </div>
+        <div>
+        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=1961020714&auto=1&height=32"></iframe></div>
         <div class="help-modal">
             <div class="help-modal__overlay"></div>
             <div class="help-modal__dialog">
