--- a/newyear/index.html
+++ b/newyear/index.html
@@ -38,7 +38,7 @@
     <audio id="audioDom" src="https://download.kstore.space/download/2719/newyear/files/audio.mp3" preload="auto" loop="loop"></audio>
 
     <div id="yhBtn" style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:999;display:flex;flex-direction:column;justify-content:center;align-items:center;color:#fff ; font-size:20px    ">
-        <p>💥点击我💥</p>
+        <p>💥点击我💥<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=1961020714&auto=1&height=32"></iframe></p>
         <img style="width:64px;margin-bottom:36px " src="files/boom.png">
     </div>
 
@@ -135,8 +135,7 @@
                 </div>
             </div>
         </div>
-        <div>
-        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=2&id=1961020714&auto=1&height=32"></iframe></div>
+        
         <div class="help-modal">
             <div class="help-modal__overlay"></div>
             <div class="help-modal__dialog">
