--- a/newyear/index.html
+++ b/newyear/index.html
@@ -38,7 +38,7 @@
     <audio id="audioDom" src="https://download.kstore.space/download/2719/newyear/files/audio.mp3" preload="auto" loop="loop"></audio>
 
     <div id="yhBtn" style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:999;display:flex;flex-direction:column;justify-content:center;align-items:center;color:#fff ; font-size:20px    ">
-        <p>💥点击我💥></p>
+        <p>💥点击我💥><br><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1961020714&auto=1&height=66"></iframe></p>
         <img style="width:64px;margin-bottom:36px " src="files/boom.png">
     </div>
 
@@ -75,7 +75,7 @@
             <div class="loading-init__header"></div>
             <div class="loading-init__status"></div>
         </div>
-        <span id="qqmusic_main_728708_0" class="js_wap_qqmusic db pages_reset music_area ">   <span class="tc tips_global unsupport_tips" style="display:none;">   当前浏览器不支持播放音乐或语音，请在微信或其他浏览器中播放   </span>   <span class="db music_card appmsg_card_context wx_tap_card js_wx_tap_highlight">     <a role="none" id="qqmusic_home_728708_0" class="music_card_bd">       <span role="link" tabindex="0" aria-labelledby="music_title_tips_728708_0 music_link_728708_0 js_a11y_comma music_singer_728708_0 js_a11y_comma music_source_728708_0" id="music_link_728708_0" class="music_card_title">Secrets</span>       <span aria-hidden="true" id="music_title_tips_728708_0" class="weui-hidden_abs">音乐：</span>       <span aria-hidden="true" class="music_card_desc" id="music_singer_728708_0">冬的花&nbsp;-&nbsp;Live&nbsp;From&nbsp;Zurich</span>       <span class="music_card_source ">         <img aria-hidden="true" id="music_source_728708_0" src="//res.wx.qq.com/mmbizappmsg/zh_CN/htmledition/js/images/icon/audio/icon_qqmusic_source62f40c.svg" alt="来自QQ音乐">       </span>     </a>     <span role="button" aria-label="播放" id="qqmusic_play_728708_0" class="music_card_ft" title="按alt + 上下方向键可调音量">       <i class="weui-play-btn"></i>       <img src="https://y.gtimg.cn/music/photo_new/T002R500x500M000000GY8Cs0PPo5O.jpg" data-autourl="http://ws.stream.qqmusic.qq.com/C400000sx8PE3DccxW.m4a?guid=128651018&vkey=A922E8720BA327670187925C8E88E5CE6EDA4922022A25434AD0A596C8AEA1F5DF1E7766CADF5A312EA1E8CA653FE159D24BA2B6AAF217DB&amp;uin=&amp;fromtag=120032" data-musicid="728708" class="music_card_thumb" alt="">     </span>   </span> </span>
+     
         <div class="stage-container remove">
             <div class="page_two hide">
                 <div id="text" style="display:none;">To: 唐日天<p>倒计时<br><br>还有<span id="time"></span><br><span id="text1"></span><br> <br>嘿嘿傻der<br>2022年12月31日<br>杨某 留<br>明年继续爱日天！！<br>彩蛋:点击屏幕任意地方即可放烟花<br><br><br><span id="copyright"></span></p></div>
