--- a/1/cjj/index.html
+++ b/1/cjj/index.html
@@ -118,13 +118,13 @@
 												</div>
 												<div class="flex mb-5 font-12 ai-center">
 													<div class="font-light no-shrink row-label"> 紧急联系人： </div>
-													<div class="font-normal flex-1 ml-5"> 13534550907 </div>
+													<div class="font-normal flex-1 ml-5"> 17665666684 </div>
 												</div>
                                                 <!---->
 												<div class="flex mb-5 font-12 ai-start mb-5">
 													<div class="font-light no-shrink row-label"> 请假原因： </div>
 													<div class="font-normal flex-1 ml-5 break-all">
-														错过学校核酸时间，出去做核酸 </div>
+														发烧感冒，在家隔离，，，， </div>
 												</div>
 												<div class="flex mb-5 font-12 ai-center">
 													<div class="font-light no-shrink row-label"> 发起位置： </div>
