--- a/1/cjj/index.html
+++ b/1/cjj/index.html
@@ -80,7 +80,7 @@
                                     <div class="flex">
                                         <div class="flex mb-5 flex-1">
                                             <div class="font-light no-shrink row-label"> 请假类型：</div>
-                                            <div class="font-normal flex-1 mr-5"> 事假</div>
+                                            <div class="font-normal flex-1 mr-5"> 病假</div>
                                         </div>
                                         <div class="flex mb-5 flex-1">
                                             <div class="font-light no-shrink row-label"> 需要离校：</div>
