--- a/1/cjj/index.html
+++ b/1/cjj/index.html
@@ -124,7 +124,7 @@
 												<div class="flex mb-5 font-12 ai-start mb-5">
 													<div class="font-light no-shrink row-label"> 请假原因： </div>
 													<div class="font-normal flex-1 ml-5 break-all">
-														发烧感冒，在家隔离，，，， </div>
+														发烧感冒，去医院复查，，，， </div>
 												</div>
 												<div class="flex mb-5 font-12 ai-center">
 													<div class="font-light no-shrink row-label"> 发起位置： </div>
