--- a/1/cjj/index.html
+++ b/1/cjj/index.html
@@ -213,7 +213,7 @@
                                                             <div class="flex ai-center"><i
                                                                     class="mr-5 no-shrink bg-white z-index-1 absolute pin-l pin-t cat-icon iconfont iconround font-success"
                                                                     style="font-size: 5.33333vw; top: -0.53333vw;"></i><span
-                                                                    class="ml-20 mr-5" style="margin-left: 8vw;">二级：李可翔 -
+                                                                    class="ml-20 mr-5" style="margin-left: 8vw;">二级：钟雪 -
                                                                     审批<span
                                                                         style="color:#00ca75;">通过</span>(逾期处理)</span>
                                                             </div>
